--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ description: >- # dont remove this line. this will ignore all new lines until th
 
 
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
-profile_image: ./assets/images/profile-image/avatar.jpeg
+profile_image: assets/images/profile-image/avatar.jpg
 
 
 # Link your resume
 # You can place your resume in assets/resume/{resume.pdf or add external link such as pdf saved in google drive 
-resume-url: ./assets/resume/resume.pdf # or /assets/resume/resume.pdf
+resume-url: assets/resume/resume.pdf # or /assets/resume/resume.pdf
 
 
 # Set up external links - this will show up as small icons next to your name.
